--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,26 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
     <div class="col-6">
-        <app-todo-list></app-todo-list>
+        <router-outlet></router-outlet>
+    </div>
+  </div>
+
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <span>
+        <a routerLink="" routerLinkActive="active">
+          All
+        </a>
+        <a routerLink="/active" routerLinkActive="active">
+          Active
+        </a>
+        <a routerLink="/completed" routerLinkActive="active">
+          Completed
+      </a>
+      </span>
     </div>
   </div>
 </div>
+
+
 
